src/objects/DRDW_ND_Budget_Detail__c.object
<CustomObject>
    <description>This object contains details related to Non-Discretionary Budget Detail</description>
    <fields>
        <fullName>DRDW_Cost_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DRDW Cost Center</label>
        <referenceTo>DRDW_Cost_Center__c</referenceTo>
        <relationshipLabel>DRDW ND Budget Detail</relationshipLabel>
        <relationshipName>DRDW_ND_Budget_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DRDW_ND_Budget_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DRDW ND Budget Master</label>
        <referenceTo>DRDW_ND_Budget_Master__c</referenceTo>
        <relationshipLabel>DRDW ND Budget Detail</relationshipLabel>
        <relationshipName>DRDW_ND_Budget_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(DRDW_ND_Budget_Master__r.Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>DRDW ND Budget Detail</label>
    <nameField>
        <displayFormat>ND-{0000}</displayFormat>
        <label>DRDW ND Budget Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRDW ND Budget Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>